// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`должен отрендерить данные карточки 1`] = `
<div
  className="GarageAddCardPreview"
>
  <div
    className="GarageAddCardPreview__header"
  >
    <div
      className="GarageAddCardPreview__mark"
    >
      Mercedes-Benz G-Класс AMG
    </div>
    <img
      alt="Mercedes-Benz G-Класс AMG"
      className="GarageAddCardPreview__logo"
      src="//avatars.mds.yandex.net/get-verba/216201/2a00000164d564c2cb01ec4bc5d82315b68c/dealer_logo"
    />
  </div>
  <div
    className="GarageAddCardPreview__details"
  >
    <div
      className="GarageAddCardPreview__item"
    >
      <div
        className="GarageAddCardPreview__itemLabel"
      >
        Год
      </div>
      <div
        className="GarageAddCardPreview__itemValue"
      >
        2014
      </div>
    </div>
    <div
      className="GarageAddCardPreview__item"
    >
      <div
        className="GarageAddCardPreview__itemLabel"
      >
        Двигатель
      </div>
      <div
        className="GarageAddCardPreview__itemValue"
      >
        5,5 л / 544 л.с.
      </div>
    </div>
    <div
      className="GarageAddCardPreview__item"
    >
      <div
        className="GarageAddCardPreview__itemLabel"
      >
        Цвет
      </div>
      <div
        className="GarageAddCardPreview__itemValue"
      >
        Черный
      </div>
    </div>
    <div
      className="GarageAddCardPreview__item"
    >
      <div
        className="GarageAddCardPreview__itemLabel"
      >
        Регион учёта
      </div>
      <div
        className="GarageAddCardPreview__itemValue"
      >
        <Link
          className="GarageAddCardPreview__link"
          onClick={[Function]}
        >
          Москва
        </Link>
      </div>
    </div>
    <div
      className="GarageAddCardPreview__item"
    >
      <div
        className="GarageAddCardPreview__itemLabel"
      >
        VIN
      </div>
      <div
        className="GarageAddCardPreview__itemValue"
      >
        WDB4632721X230678
      </div>
    </div>
    <p
      className="GarageAddCardPreview__note"
    >
      Проверьте регион и поменяйте его, если не соответствует действительности
    </p>
  </div>
</div>
`;

exports[`должен отрендерить данные отчета 1`] = `
<div
  className="GarageAddCardPreview"
>
  <div
    className="GarageAddCardPreview__header"
  >
    <div
      className="GarageAddCardPreview__mark"
    >
      Subaru XV
    </div>
    <img
      alt="Subaru XV"
      className="GarageAddCardPreview__logo"
      src="picture-of-cat"
    />
  </div>
  <div
    className="GarageAddCardPreview__details"
  >
    <div
      className="GarageAddCardPreview__item"
    >
      <div
        className="GarageAddCardPreview__itemLabel"
      >
        Год
      </div>
      <div
        className="GarageAddCardPreview__itemValue"
      >
        2017
      </div>
    </div>
    <div
      className="GarageAddCardPreview__item"
    >
      <div
        className="GarageAddCardPreview__itemLabel"
      >
        Двигатель
      </div>
      <div
        className="GarageAddCardPreview__itemValue"
      >
        2,0 л / 149 л.с.
      </div>
    </div>
    <div
      className="GarageAddCardPreview__item"
    >
      <div
        className="GarageAddCardPreview__itemLabel"
      >
        Цвет
      </div>
      <div
        className="GarageAddCardPreview__itemValue"
      >
        Оранжевый
      </div>
    </div>
    <div
      className="GarageAddCardPreview__item"
    >
      <div
        className="GarageAddCardPreview__itemLabel"
      >
        Регион учёта
      </div>
      <div
        className="GarageAddCardPreview__itemValue"
      >
        <Link
          className="GarageAddCardPreview__link"
          onClick={[Function]}
        >
          Москва
        </Link>
      </div>
    </div>
    <div
      className="GarageAddCardPreview__item"
    >
      <div
        className="GarageAddCardPreview__itemLabel"
      >
        VIN
      </div>
      <div
        className="GarageAddCardPreview__itemValue"
      >
        JF1GT7LL*JG*****5
      </div>
    </div>
    <p
      className="GarageAddCardPreview__note"
    >
      Проверьте регион и поменяйте его, если не соответствует действительности
    </p>
  </div>
</div>
`;

exports[`должен отрендерить данные отчета без данных двигателя 1`] = `
<div
  className="GarageAddCardPreview"
>
  <div
    className="GarageAddCardPreview__header"
  >
    <div
      className="GarageAddCardPreview__mark"
    >
      ИЖ Москвич-412
    </div>
    <img
      alt="ИЖ Москвич-412"
      className="GarageAddCardPreview__logo"
      src="//avatars.mds.yandex.net/get-verba/937147/2a00000160921567a66d05f9be4d8f314e15/dealer_logo"
    />
  </div>
  <div
    className="GarageAddCardPreview__details"
  >
    <div
      className="GarageAddCardPreview__item"
    >
      <div
        className="GarageAddCardPreview__itemLabel"
      >
        Год
      </div>
      <div
        className="GarageAddCardPreview__itemValue"
      >
        1994
      </div>
    </div>
    <div
      className="GarageAddCardPreview__item"
    >
      <div
        className="GarageAddCardPreview__itemLabel"
      >
        Двигатель
      </div>
      <div
        className="GarageAddCardPreview__itemValue"
      >
        73 л.с.
      </div>
    </div>
    <div
      className="GarageAddCardPreview__item"
    >
      <div
        className="GarageAddCardPreview__itemLabel"
      >
        Цвет
      </div>
      <div
        className="GarageAddCardPreview__itemValue"
      >
        Белый
      </div>
    </div>
    <div
      className="GarageAddCardPreview__item"
    >
      <div
        className="GarageAddCardPreview__itemLabel"
      >
        Регион учёта
      </div>
      <div
        className="GarageAddCardPreview__itemValue"
      >
        <Link
          className="GarageAddCardPreview__link"
          onClick={[Function]}
        >
          Москва
        </Link>
      </div>
    </div>
    <div
      className="GarageAddCardPreview__item"
    >
      <div
        className="GarageAddCardPreview__itemLabel"
      >
        VIN
      </div>
      <div
        className="GarageAddCardPreview__itemValue"
      >
        L0****82
      </div>
    </div>
    <p
      className="GarageAddCardPreview__note"
    >
      Проверьте регион и поменяйте его, если не соответствует действительности
    </p>
  </div>
</div>
`;
